--- a/default.hbs
+++ b/default.hbs
@@ -17,6 +17,7 @@
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="//cloud.typography.com/7837472/632644/css/fonts.css"/>
     <link rel="stylesheet" type="text/css" href="{{asset "css/style.min.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/animate.min.css"}}" />
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
