--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -3,12 +3,12 @@
         <a class="mnu-nav--close" href="#">
 
         </a>
-        <a class="mnu-nav--logo" href="#">
+        <a class="mnu-nav--logo" href="/">
 
         </a>
         <div class="mnu-navigation__table">
             <ul class="mnu-navigation__list">
-                <li class="mnu-navigation__item">
+                <!--li class="mnu-navigation__item">
                     <a href="#" class="mnu-navigation__link">
                         <h5 class="mnu-navigation__subtitle">Case studies</h5>
                         <h4 class="mnu-navigation__title">Dolor sit amet</h4>
@@ -17,20 +17,32 @@
                 <li class="mnu-navigation__item">
                     <a href="#" class="mnu-navigation__link">
                         <h5 class="mnu-navigation__subtitle">Dolor sit </h5>
-                        <h4 class="mnu-navigation__title">a lot of money</h4>
+                        <h4 class="mnu-navigation__title">My two cents</h4>
                     </a>
-                </li>
+                </li-->
                 <li class="mnu-navigation__item">
                     <a href="#" class="mnu-navigation__link">
-                        <h5 class="mnu-navigation__subtitle">Tarapia & tapioca</h5>
-                        <h4 class="mnu-navigation__title">Sit antani amet</h4>
+                        <h5 class="mnu-navigation__subtitle">Important & memorable</h5>
+                        <h4 class="mnu-navigation__title">the journal</h4>
                     </a>
+
                     <ul class="mnu-navigation__list--cat">
                         {{#foreach navigation}}
                             <li class="nav-{{slug}} mnu-navigation__item--cat {{#if current}} nav-current{{/if}}">
                                 <a href="{{url absolute="true"}}" class="mnu-navigation__blog--cat mnu-navigation__blog--active">{{label}}</a>
                             </li>
                         {{/foreach}}
+                    </ul>
+                </li>
+                <li class="mnu-navigation__item">
+                    <a href="#" class="mnu-navigation__link">
+                        <h5 class="mnu-navigation__subtitle">work with us</h5>
+                        <h4 class="mnu-navigation__title">We're hiring</h4>
+                    </a>
+                    <ul class="mnu-navigation__list--cat">
+                        <li class=" mnu-navigation__item--cat nav-current">
+                            <a href="/we-are-hiring-full-stack-developer" class="mnu-navigation__blog--cat mnu-navigation__blog--active">Full Stack Developer</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
