--- a/default.hbs
+++ b/default.hbs
@@ -24,11 +24,9 @@
 </head>
 <body class="{{body_class}} c-blog">
 
-    {{navigation}}
-
     <main class="mnu-page__content">
-        <div class="c-blog__logo">
-            <a class="c-blog__logo--mnu" href="#">
+        <div class="c-blog__logo" style="background-image:url({{@blog.logo}})">
+            <a class="nav--scroll--back" href="/">
 
             </a>
         </div>
