--- a/partials/innernav.hbs
+++ b/partials/innernav.hbs
@@ -1,6 +1,6 @@
 {{#post}}
     <nav class="nav--scroll">
-        <a class="nav--scroll--back" href="#">
+        <a class="nav--scroll--back" href="/">
 
         </a>
 
@@ -31,8 +31,5 @@
             </div>
         </div>
 
-        <a class="nav--scroll--mnu" href="#">
-
-        </a>
     </nav>
 {{/post}}
