--- a/post.hbs
+++ b/post.hbs
@@ -20,9 +20,9 @@
                     </h1>
                 </div>
                 <div class="c-blog__excerpt fittext--more">
-                    <div class="c-blog__excerpt--content vibrant-alt">
+                    <div class="c-blog__excerpt__content vibrant-alt">
                         <p>
-                            {{excerpt characters="140"}}
+                            {{excerpt characters="160"}}...
                         </p>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
 
         </div>
         <section class="o-container--full">
-            <div class="c-blog__image--main " style="background-image:url({{image}}); ">
+            <div class="c-blog__image c-blog__image--main" style="background-image:url({{image}}); ">
                 <img class="c-blog__image--main-img" src="{{image}}"/>
             </div>
         </section>
