--- a/assets/scss/_settings.typography.scss
+++ b/assets/scss/_settings.typography.scss
@@ -1,8 +1,8 @@
 
 $base-font--size: 1rem !global;
 
-$font-family: "Sentinel SSm A", "Sentinel SSm B", Serif;
-$font-family--secondary: "Gotham SSm A", "Gotham SSm B", sans-serif;
+$font-family: "Merriweather", Serif;
+$font-family--secondary: "Montserrat", sans-serif;
 
 //** Font-size
 $font-size-base:          16px !default;
