--- a/assets/scss/_components.blog.post.scss
+++ b/assets/scss/_components.blog.post.scss
@@ -4,7 +4,7 @@
         background-repeat: no-repeat;
         background-position: center;
         background-color: $white;
-        background-size: contain;
+        background-size: auto 80%;
         height: 4rem;
         position: relative;
         @include bgSvg(blog__marchio--bold);
@@ -33,119 +33,6 @@
         &--mnu {
             @include bgSvg(blog__nav--mnu);
             right: 0;
-        }
-    }
-
-    & .c-blog__list {
-        position: relative;
-        @include zindex($zindex-layout);
-
-        &__wrapper {
-            padding: 0;
-            margin: 0;
-
-        }
-        &__item {
-            padding: 1rem;
-            display: block;
-            @include clearfix();
-            border-right: 0.5rem solid transparent;
-            border-left: 0.5rem solid transparent;
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;
-            position: relative;
-
-            &__button {
-                display: inline-block;
-                font-family: $font-family--secondary;
-                padding: 0.5rem 1rem;
-                border: 1px solid $white;
-                border-radius: 0.25rem;
-                color: $white;
-                text-transform: uppercase;
-                font-size: $font-size-xx-small;
-                margin-top: 1rem;
-                text-decoration: none;
-                background-color: rgba(255, 255, 255, 0.4);
-                @include transition(background-color color 0.7s ease);
-                &:hover {
-                    background-color: rgba(255, 255, 255, 1);
-                    color: $font-color;
-                }
-            }
-
-            &:after {
-                content: "";
-                transition: opacity 500ms ease;
-                background-color: $white;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                right: 0;
-                display: block;
-                height: 100%;
-                width: 100%;
-                position: absolute;
-                opacity: 1;
-                @include zindex($zindex-normal);
-            }
-
-            &:before {
-                content: '';
-                width: 96px;
-                height: 0.125rem;
-                display: inline-block;
-                background: #dadada;
-                position: absolute;
-                bottom: -1px;
-                left: 50%;
-                margin-left: -48px;
-                @include zindex($zindex-layout);
-            }
-            &--first {
-                width: 100%;
-                display: table;
-                & .c-blog__list__item--wrapper {
-                    display: table-cell;
-                    padding: 20vh 0;
-                    vertical-align: middle;
-                }
-                &:after {
-                    opacity: 0;
-
-                }
-                .c-blog__title, .c-blog__subtitle {
-                    color: $white;
-                }
-            }
-
-            &--wrapper {
-                @include zindex($zindex-layout);
-                position: relative;
-                padding: 2rem;
-                display: block;
-                text-decoration: none;
-                color: $gray-dark;
-                @include t-text-align(center);
-            }
-
-            &--active {
-                &:after {
-                    //background-color: $white;
-                    //opacity: 0;
-                }
-                & .c-blog__list__item--wrapper {
-                    //color: $white;
-                    .c-blog__subtitle {
-                        //color: $white;
-                    }
-                }
-            }
-
-            &:hover {
-                background-color: rgba(255, 255, 255, 0.8);
-            }
         }
     }
 
@@ -197,8 +84,9 @@
         }
 
         &--list {
-            font-weight: normal;
-            font-family: $font-family--secondary;
+            font-weight: $font-weight-light;
+            font-family: $font-family;
+            line-height: 1.4;
             margin: 0;
             margin-top: 1rem;
             color: $gray-light;
@@ -227,6 +115,7 @@
         position: relative;
         height: 45vh;
         background-size: cover;
+        background-position: center center;
 
         &--main {
             height: 75vh;
@@ -321,49 +210,7 @@
         }
     }
 
-    &__author {
-        display: inline-block;
-        margin: 0 auto;
-        @include clearfix();
-        &--figure {
-            width: 3rem;
-            height: 3rem;
-            border-radius: 50%;
-            overflow: hidden;
-            display: inline-block;
-            float: left;
-            margin-top: 1.25rem;
-        }
 
-        &--image {
-
-        }
-        &--profile {
-            margin: 1.67rem auto;
-            margin-left: 0.5rem;
-            display: inline-block;
-            float: left;
-            height: 2rem;
-            font-family: $font-family--secondary;
-            line-height: 1.25;
-            @include t-text-align(left);
-
-        }
-        &--name {
-            font-weight: $font-weight-bold;
-            text-transform: uppercase;
-            display: block;
-            font-size: $font-size-small;
-        }
-        &--role {
-            display: block;
-            text-transform: capitalize;
-            font-size: $font-size-x-small;
-            font-weight: $font-weight-bold;
-            font-family: $font-family;
-        }
-
-    }
     &__share {
         margin: 2rem auto;
         @include span(8 of 12);
@@ -432,27 +279,46 @@
 
     &__footer {
         &__single {
-            &--left, &--right {
-                @include span(12);
-                @include t-text-align(center);
-                text-decoration: none;
-                min-height: 15rem;
-                display: table;
-                background-position: center;
-                background-repeat: no-repeat;
-                background-color: $black;
-                background-size: 100%;
-                transition: background-size 1s;
-                @include susy-breakpoint($desktop, $generic_container--map) {
-                    @include t-text-align(left);
-                    @include span(6 of 12);
+            position: relative;
+            overflow: hidden;
+            @include span(12);
+            @include t-text-align(center);
+            text-decoration: none;
+            min-height: 20rem;
+            display: table;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: $black;
+            background-size: 100%;
+            transition: background-size 1s;
+            @include susy-breakpoint($desktop, $generic_container--map) {
+                @include t-text-align(left);
+                @include span(6 of 12);
+            }
 
-                }
-                &:hover {
-                    background-size: 110%;
+            &__image{
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                max-width: 100%;
+                min-height: 100%;
+                -webkit-transform: scale(1.05);
+                -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+            }
+
+            &:hover {
+                .c-blog__list__item__image{
+                    -webkit-transform: scale(1);
                 }
             }
+
+            &--left, &--right {
+
+            }
             &--inner {
+                position: relative;
                 display: table-cell;
                 vertical-align: middle;
                 color: $white;
