--- a/assets/scss/_settings.colors.scss
+++ b/assets/scss/_settings.colors.scss
@@ -6,11 +6,13 @@ $gray-light:    #9B9B9B;
 $gray-dark:     #4A4A4A;
 $gray-darker:   #8c8c8c;
 $gray-darkest:  #666;
-$yellow-good:   #fcc100;
 
-$mnu-background-color: $yellow-good;
-$mnu-background-color--hover: darken($yellow-good, 10%);
+$primary-color: #282941;
+$highlight-color: #3db8de;
+
+$mnu-background-color: $primary-color;
+$mnu-background-color--hover: darken($primary-color, 10%);
 $mnu-font-color: $white;
 
-$color-link:    $yellow-good;
-$color-link-hover: darken($yellow-good, 10%);
+$color-link:    $primary-color;
+$color-link-hover: darken($primary-color, 10%);
