--- a/index.hbs
+++ b/index.hbs
@@ -1,6 +1,18 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 
+<header class="o-container--full c-blog__list">
+    <div class="c-blog__list__wrapper">
+        <div class="c-blog__list__item--first"  style="background-image: url({{@blog.cover}}")>
+                <div class="o-container--boxed c-blog__list__item--wrapper">
+                    <div class="c-blog__titles">
+                        <h1 class="c-blog__title">{{@blog.title}}</h1>
+                        <h2 class="c-blog__subtitle c-blog__subtitle--list">{{@blog.description}}</h2>
+                    </div>
+                </div>
+        </div>
+    </div>
+</header>
 
 {{! The main content area on the homepage }}
 <section class="o-container--full c-blog__list">
