--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -2,42 +2,27 @@
 <div class="extra-pagination inner">
     {{!pagination
 </div>
-
-
 }}
-
 {{! This is the post loop - each post will be output using this markup }}
 {{#foreach posts}}
-    <li class="c-blog__list__item">
-        <div class="o-container--boxed c-blog__list__item--wrapper">
+        <li class="c-blog__list__item">
+            <img class="c-blog__list__item__image" src="{{image}}">
+            <a href="{{url}}" class="o-container--boxed c-blog__list__item--wrapper">
 
-            <div class="c-blog__titles">
-                <h5 class="c-blog__subtitle  c-blog__subtitle c-blog__subtitle--list--header">
-                    {{date}}
-                </h5>
+                <div class="c-blog__titles ">
+                    <h5 class="c-blog__subtitle  c-blog__subtitle c-blog__subtitle--list--header">
+                        {{#foreach tags}}
+                            <span title="{{name}}" class="tag-{{id}}">{{name}}</span> {{#if @last}}{{else}}/{{/if}}
+                        {{/foreach}}
+                    </h5>
 
-                <a href="{{url}}">
                     <h3 class="c-blog__title fittext-mid">
                         {{{title}}}
                     </h3>
-                </a>
-            </div>
-
-            <figure class="c-blog__image" style="background-image: url({{image}});" data-img="{{image}}">
-            </figure>
-
-            <div class="c-blog__single c-blog__content t-align-left">
-                    <p class="c-blog__content__p">
-                        {{excerpt characters="300"}}
-                    </p>
-                <a href="{{url}}" class="c-blog__list__button">
-                    Leggi tutto
-                </a>
-            </div>
-
-
-        </div>
-    </li>
+                    <h5 class="c-blog__subtitle c-blog__subtitle--list vibrant">{{excerpt words="26"}}</h5>
+                </div>
+            </a>
+        </li>
 {{/foreach}}
 
 {{! Previous/next page links - displayed on every page }}
