--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -80,6 +80,8 @@
   "components.author",
   "components.buttons",
   "components.menu",
+  "components.hero",
+  "components.fx",
   "components.blog.post",
   "components.blog.list";
 
