--- a/assets/scss/_components.blog.list.scss
+++ b/assets/scss/_components.blog.list.scss
@@ -12,13 +12,13 @@
             padding: 1rem;
             display: block;
             @include clearfix();
-            border-right: 0.5rem solid transparent;
-            border-left: 0.5rem solid transparent;
+            //border-right: 0.5rem solid transparent;
+            //border-left: 0.5rem solid transparent;
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
             position: relative;
-            min-height: 20vh;
+            min-height: 35vh;
             width: 100%;
             display: table;
             overflow: hidden;
@@ -37,32 +37,13 @@
             
             & .c-blog__list__item--wrapper {
                 display: table-cell;
-                padding: 5vh 0;
+                padding: 10vh 0;
                 vertical-align: middle;
                 @include span(12);
                 @include clearfix();
                 @include susy-breakpoint($desktop, $generic_container--map) {
                     @include span(8 of 12);
                     @include push(2);
-                }
-            }
-
-            &--first {
-                width: 100%;
-                display: table;
-                background-size: cover;
-                background-position: center center;
-                & .c-blog__list__item--wrapper {
-                    display: table-cell;
-                    padding: 20vh 0;
-                    vertical-align: middle;
-                }
-                &:after {
-                    opacity: 0;
-
-                }
-                .c-blog__title, .c-blog__subtitle {
-                    color: $white;
                 }
             }
 
@@ -95,7 +76,9 @@
                 @include zindex($zindex-layout);
             }
             &:last-child{
-
+                &:before {
+                    height: 0rem;
+                }
             }
             &--wrapper {
                 @include zindex($zindex-layout);
@@ -114,6 +97,9 @@
                 &:after {
                     background-color: $white;
                     opacity: 0;
+                }
+                &:before {
+                    height: 0rem;
                 }
                 & .c-blog__list__item--wrapper {
                     color: $white;
