--- a/assets/scss/_components.blog.post.scss
+++ b/assets/scss/_components.blog.post.scss
@@ -139,7 +139,8 @@
             @include span(12 of 12);
             font-family: $font-family--secondary;
             font-size: $font-size-large;
-            font-weight: $font-weight-base;
+            font-weight: $font-weight-bold;
+            margin-top: 2rem;
             @include t-text-align(center);
             @include susy-breakpoint($desktop, $generic_container--map) {
                 @include span(10 of 12);
@@ -209,7 +210,6 @@
 
         }
     }
-
 
     &__share {
         margin: 2rem auto;
@@ -288,7 +288,7 @@
             display: table;
             background-position: center;
             background-repeat: no-repeat;
-            background-color: $black;
+            background-color: $white;
             background-size: 100%;
             transition: background-size 1s;
             @include susy-breakpoint($desktop, $generic_container--map) {
@@ -314,8 +314,36 @@
                 }
             }
 
-            &--left, &--right {
+            &--empty {
+                display: none;
+                @include susy-breakpoint($desktop, $generic_container--map) {
+                    display: block;
+                    position: relative;
+                    background: $white;
+                    padding: 40px;
+                    overflow: hidden;
+                    
+                    &:before, &:after {
+                        position: absolute;
+                        content: '';
+                        background: $gray-lightest;
+                        display: block;
+                        width: 100%;
+                        height: 1px;
+                        -webkit-transform: rotate(-45deg);
+                        transform: rotate(-45deg);
+                        left: 0;
+                        right: 0;
+                        top: 0;
+                        bottom: 0;
+                        margin: auto;
+                    }
 
+                    &:after {
+                        -webkit-transform: rotate(45deg);
+                        transform: rotate(45deg);
+                    }
+                }
             }
             &--inner {
                 position: relative;
@@ -363,7 +391,7 @@
         font-weight: $font-weight-light;
         font-size: $font-size-xxx-small;
         color: $gray-light;
-
+        margin-top: 0.5rem;
         @include t-text-align(center);
         @include span(12);
         @include clearfix();
