--- a/index.hbs
+++ b/index.hbs
@@ -1,18 +1,28 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 
-<header class="o-container--full c-blog__list">
-    <div class="c-blog__list__wrapper">
-        <div class="c-blog__list__item--first"  style="background-image: url({{@blog.cover}}")>
-                <div class="o-container--boxed c-blog__list__item--wrapper">
-                    <div class="c-blog__titles">
-                        <h1 class="c-blog__title">{{@blog.title}}</h1>
-                        <h2 class="c-blog__subtitle c-blog__subtitle--list">{{@blog.description}}</h2>
-                    </div>
-                </div>
-        </div>
+<header class="c-hero">
+    <div class="c-hero__wrapper">
+        <img src="{{@blog.cover}}" class="c-hero__img tilt-effect"
+             data-tilt-options='{
+             "opacity" : 0.6,
+             "movement": { "perspective" : 1000,
+                           "translateX" : 10,
+                           "translateY" : 10,
+                           "translateZ" : 2,
+                           "rotateX" : 3,
+                           "rotateY" : 3 }
+                         }'
+                />
+    </div>
+    <div class="o-container--boxed">
+        <hgroup class="c-hero__titlegroup">
+            <h1 class="c-hero__title fittext-huge">{{@blog.title}}</h1>
+            <h2 class="c-hero__subtitle">{{@blog.description}}</h2>
+        </hgroup>
     </div>
 </header>
+
 
 {{! The main content area on the homepage }}
 <section class="o-container--full c-blog__list">
